--- a/Useful BaseR/Coding-tasks-14.06.- usefull-base-R-solutions.Rmd
+++ b/Useful BaseR/Coding-tasks-14.06.- usefull-base-R-solutions.Rmd
@@ -6,7 +6,7 @@ output:
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(eval =FALSE, include = TRUE)
+knitr::opts_chunk$set(eval =TRUE, include = TRUE)
 ```
 
 # Looking up functions
@@ -31,6 +31,20 @@ Use the data(iris)  data set or any other data set you like. Save the file once 
 
 ```{r}
 data(iris) 
+iris
+
+# .R file
+outpath <- "/Users/melinaklostermann/Documents/non-project-R/Coding_tasks/Zarnack_CodingTasks/Useful BaseR/"
+save(iris, file =  paste0(outpath,"iris.R") )
+
+remove(iris)
+load(paste0(outpath,"iris.R"))
+
+# .rds file
+saveRDS(iris, file = paste0(outpath,"iris.rds"))
+iris_2 <- readRDS(paste0(outpath,"iris.rds"))  # rds files can be stored under a different name when reloading, R files not
+
+
 
 ```
 
@@ -44,8 +58,10 @@ When you save something you have to specify a path. This can get messy if you sa
 
 ```{r}
 # example
-outpath = "my/output/path/"
-save(paste(outpath, "file1.RData", sep = "."))
+# outpath = "my/output/path/"
+
+paste(outpath, "file1", "RData", sep = ".")
+paste(outpath, "file1", Sys.Date(), "RData", sep = ".")
 
 ```
 
@@ -55,7 +71,7 @@ During you project you might get data files in table formats that you want to re
 
 ### Task 3 
 Use the given coding-task.txt and coding-task.csv to familarise yourself with the functions below. What options do the functions have and what do they do?
-```{r}
+```{r eval=FALSE, include=TRUE}
 
 read.table()
 read.csv()
@@ -64,12 +80,14 @@ read.delim()
 write.table()
 write.csv()
 
+```
 
-write.table(iris, file = paste0("/Users/melinaklostermann/Documents/non-project-R/Coding_tasks/Zarnack_CodingTasks/Useful BaseR/", "coding-task.txt"))
-read.table(paste0("/Users/melinaklostermann/Documents/non-project-R/Coding_tasks/Zarnack_CodingTasks/Useful BaseR/", "coding-task.txt"))
+```{r}
+# write.table(iris, file = paste0("/Users/melinaklostermann/Documents/non-project-R/Coding_tasks/Zarnack_CodingTasks/Useful BaseR/", "coding-task.txt"))
+t1 <- read.table(paste0("/Users/melinaklostermann/Documents/non-project-R/Coding_tasks/Zarnack_CodingTasks/Useful BaseR/", "coding-task.txt"), header = F, sep = ";" )
 
-write.csv(iris, file = paste0("/Users/melinaklostermann/Documents/non-project-R/Coding_tasks/Zarnack_CodingTasks/Useful BaseR/", "coding-task.csv"))
-read.csv(paste0("/Users/melinaklostermann/Documents/non-project-R/Coding_tasks/Zarnack_CodingTasks/Useful BaseR/", "coding-task.csv"))
+# write.csv(iris, file = paste0("/Users/melinaklostermann/Documents/non-project-R/Coding_tasks/Zarnack_CodingTasks/Useful BaseR/", "coding-task.csv"))
+t2 <- read.csv(paste0("/Users/melinaklostermann/Documents/non-project-R/Coding_tasks/Zarnack_CodingTasks/Useful BaseR/", "coding-task.csv"), header = T)
 
 
 ```
@@ -93,25 +111,35 @@ dev.off()
 ### Task 4
 Save the histogram from the example above in a 5 x 5 pdf and a 10 x 5 png. Choose a usefull fontsize.
 
+```{r eval=FALSE, include=TRUE}
+pdf(paste0(outpath,"plot.pdf"), width = 5, height = 5)
+hist(iris$Sepal.Width)
+dev.off()
+
+png(paste0(outpath,"plot.png"), width = 10, height = 5)
+hist(iris$Sepal.Width)
+dev.off()
+
+```
 
 # What is inside an R object?
 
 ## First look
 Usefull functions are 
 ```{r}
-head()
-tail()
-table()
-summary()
+head(iris)
+tail(iris)
+table(iris$Sepal.Length)
+summary(iris)
 
 ```
 
 ### Task 5 
-Try out the functions from above, that you do not know yet. Are there more functions of this kind that you whould recommend?
+Try out the functions from above, that you do not know yet. Are there more functions of this kind that you would recommend?
 
 ## Logical commands and some math
 There are some usefull logical commands, that allow you to check for certain occurences inside a huge data set, without scrolling through it.
-```{r}
+```{r eval=FALSE, include=TRUE}
 any()
 all()
 which()
@@ -131,23 +159,73 @@ is.infinite()
 ### Task 6
 Find out the following for the Iris data set:
 - Are all Petal Lengths smaller then 7?
+```{r}
+all(iris$Petal.Length < 7)
+```
+
 - Does one of the columns contain a zero?
+```{r}
+any(iris$Petal.Length == 0 | iris$Sepal.Length ==0 | iris$Sepal.Width == 0 | iris$Petal.Length == 0)
+```
 - Are there any rows with a Sepal Length of 5.8.
 
 - Which rows contain the versicolor species?
+```{r}
+which(iris$Species == "versicolor")
+
+iris[which(iris$Species == "versicolor"),]
+
+```
 - Which rows d not belng to the versicolor species?
+```{r}
+which(iris$Species != "versicolor")
+```
+
 - Which row contains the maximum/minimum Petal width?
+```{r}
+max(iris$Petal.Width)
+
+which.max(iris$Petal.Width)
+
+iris[which.max(iris$Petal.Width),]
+```
 
 - How many Sepal width are bigger then 4? How many are exactly 3?
+```{r}
+sum(iris$Sepal.Width > 4)
 
+sum(iris$Sepal.Width == 3)
+
+```
 - Which petal witdh are duplicated/unique?
-- Does the sepal length contain an NA or infitite value?
-- Are all petal lengths finite numbers?
+```{r}
+duplicated(iris$Petal.Width)
 
+unique(iris$Petal.Width)
+!duplicated(iris$Petal.Width)
+
+which(duplicated(iris$Petal.Width))
+sum(duplicated(iris$Petal.Width))
+table(duplicated(iris$Petal.Width))
+```
+
+- Does the sepal length contain an NA or infitite value?
+
+```{r}
+any(is.na(iris$Sepal.Length))
+any(is.infinite(iris$Sepal.Length))
+
+```
+
+- Are all petal lengths finite numbers?
+```{r}
+all(is.finite(iris$Petal.Length))
+
+```
 
 # Random sampling
 You can use the following function to randomly draw from a vector.
-```{r}
+```{r eval=FALSE, include=TRUE}
 set.seed()
 sample()
 runif()
@@ -155,13 +233,36 @@ runif()
 ```
 ### Task 7 
 - Use sample to extract 5 random flowers species from the iris species column.
-- Use sample and runif to get 4 random numbers between 1 and 20. What is the difference? What happens if you rerun the command?
-- Now rerun the command again two times but use set.seed to get the same result both times
+```{r}
+sample(iris$Species,5)
 
+```
+- Use sample and runif to get 4 random numbers between 1 and 20. What is the difference? What happens if you rerun the command?
+```{r}
+sample(1:20,4)
+runif(4,1,20)
+
+sample(1:20,4)
+runif(4,1,20)
+
+
+```
+
+- Now rerun the command again two times but use set.seed to get the same result both times
+```{r}
+set.seed(3)
+sample(1:20,4)
+runif(4,1,20)
+
+set.seed(3)
+sample(1:20,4)
+runif(4,1,20)
+
+```
 
 # Checking versions
 When you write a thesis you should write the versions of R, RStudio and all used packages. This is how you can look them up quickly: 
-```{r}
+```{r eval=FALSE, include=TRUE}
 R.version()
 package_version()
 RStudio.Version()
