--- a/Git-and-Github/Git_and_Github_coding_task.Rmd
+++ b/Git-and-Github/Git_and_Github_coding_task.Rmd
@@ -144,7 +144,7 @@ gitcreds_set()
 
 **Task 7** Pull the coding tasks, go into this markdown and write your name here. Commit your changed version of this script and push it back to the github repro.
 
-
+Dominik
 
 
 
